--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <header class="cabecero">
     <nav class="cabecero__nav">
         <div class="cabecero__izq">
-            <a href="/index.html"><img class="cabecero__img" src="./img/Logo.png" alt="LogoCabecera"></a>
+            <a href="./index.html"><img class="cabecero__img" src="./img/Logo.png" alt="LogoCabecera"></a>
             <i class="fa-solid fa-magnifying-glass cabecero__lupa"></i>
             <input class="cabecero__busqueda" type="text" placeholder="¿Qué desea buscar?" maxlength="20">
         </div>
@@ -82,8 +82,8 @@
 
 
 <!-- <script src="js/app.js"></script> -->
-<script type="module" src="/controllers/productos-controller.js"></script>
-<script type="module" src="/js/app.js"></script>
+<script type="module" src="./controllers/productos-controller.js"></script>
+<script type="module" src="./js/app.js"></script>
 <script src="https://kit.fontawesome.com/a2a09fc638.js" crossorigin="anonymous"></script>
 
 </body>
@@ -91,7 +91,7 @@
 <footer class="pie__pagina">
     <div class="pie__pagina__top">
         <div class="pie__pagina__top__content">
-            <img src="img/Logo.png">
+            <img src="./img/Logo.png">
             <div class="pie__pagina__top__links">
                 <a href="#">Quienes somos</a>
                 <a href="#">Política de privacidad</a>
