Responsive design added

--- a/screens/products/show.html
+++ b/screens/products/show.html
@@ -52,47 +52,7 @@
                 <h2>Productos similares</h2>                
             </div>
             <div class="productos__linea__lista">
-                <!-- <div class="productos__linea__lista__item">
-                    <img src="/img/productos/star-wars4.png" >
-                    <p class="item__nombre">Producto XYZ</p>
-                    <p class="item__precio">$ 60,00</p>
-                    <a href="#" class="item__link">Ver Producto</a>
-                </div>
 
-                <div class="productos__linea__lista__item">
-                    <img src="/img/productos/star-wars5.png" >
-                    <p class="item__nombre">Producto XYZ</p>
-                    <p class="item__precio">$ 60,00</p>
-                    <a href="#" class="item__link">Ver Producto</a>
-                </div>
-
-                <div class="productos__linea__lista__item">
-                    <img src="/img/productos/star-wars6.png" >
-                    <p class="item__nombre">Producto XYZ</p>
-                    <p class="item__precio">$ 60,00</p>
-                    <a href="#" class="item__link">Ver Producto</a>
-                </div>
-
-                <div class="productos__linea__lista__item">
-                    <img src="/img/productos/star-wars3.png" >
-                    <p class="item__nombre">Producto XYZ</p>
-                    <p class="item__precio">$ 60,00</p>
-                    <a href="#" class="item__link">Ver Producto</a>
-                </div>
-
-                <div class="productos__linea__lista__item">
-                    <img src="/img/productos/star-wars.png" >
-                    <p class="item__nombre">Producto XYZ</p>
-                    <p class="item__precio">$ 60,00</p>
-                    <a href="#" class="item__link">Ver Producto</a>
-                </div>
-
-                <div class="productos__linea__lista__item">
-                    <img src="/img/productos/star-wars2.png" >
-                    <p class="item__nombre">Producto XYZ</p>
-                    <p class="item__precio">$ 60,00</p>
-                    <a href="#" class="item__link">Ver Producto</a>
-                </div> -->
             </div>            
         </div>        
 
@@ -109,6 +69,7 @@
 <footer class="pie__pagina">
     <div class="pie__pagina__top">
         <div class="pie__pagina__top__content">
+            <div class="pie__izq">
             <img src="/img/Logo.png">
             <div class="pie__pagina__top__links">
                 <a href="#">Quienes somos</a>
@@ -118,6 +79,8 @@
                 <a href="#">Quiero ser franquiciado</a>
                 <a href="#">Anúncie aquí</a>
             </div>
+            </div>
+            
 
             <div class="pie__pagina__top__contacto">
                 <p>Hable con nosotros</p>
@@ -146,7 +109,7 @@
     </div>
 
     <div class="pie__pagina__bot">
-        <p>&copy; Desarrollado por Mauro Cubilla - 2021</p>
+        <p>&copy; Desarrollado por Mauro Cubilla - 2022</p>
     </div>
 </footer>
 
