--- a/screens/authentication/login.html
+++ b/screens/authentication/login.html
@@ -63,14 +63,16 @@
 <footer class="pie__pagina">
     <div class="pie__pagina__top">
         <div class="pie__pagina__top__content">
-            <img src="/img/Logo.png">
-            <div class="pie__pagina__top__links">
-                <a href="#">Quienes somos</a>
-                <a href="#">Política de privacidad</a>
-                <a href="#">Programa de fidelidad</a>
-                <a href="#">Nuestras Tiendas</a>
-                <a href="#">Quiero ser franquiciado</a>
-                <a href="#">Anúncie aquí</a>
+            <div class="pie__izq">
+                <img src="/img/Logo.png">
+                <div class="pie__pagina__top__links">
+                    <a href="#">Quienes somos</a>
+                    <a href="#">Política de privacidad</a>
+                    <a href="#">Programa de fidelidad</a>
+                    <a href="#">Nuestras Tiendas</a>
+                    <a href="#">Quiero ser franquiciado</a>
+                    <a href="#">Anúncie aquí</a>
+                </div>
             </div>
 
             <div class="pie__pagina__top__contacto">
@@ -100,7 +102,7 @@
     </div>
 
     <div class="pie__pagina__bot">
-        <p>&copy; Desarrollado por Mauro Cubilla - 2021</p>
+        <p>&copy; Desarrollado por Mauro Cubilla - 2022</p>
     </div>
 </footer>
 
