index path fixed

--- a/screens/products/product-index.html
+++ b/screens/products/product-index.html
@@ -24,7 +24,7 @@
 <header class="cabecero">
     <nav class="cabecero__nav">
         <div class="cabecero__izq">
-            <a href="/index.html"><img class="cabecero__img" src="/img/Logo.png" alt="LogoCabecera"></a>
+            <a href="/public/index.html"><img class="cabecero__img" src="/img/Logo.png" alt="LogoCabecera"></a>
             <i class="fa-solid fa-magnifying-glass cabecero__lupa"></i>
             <input class="cabecero__busqueda" type="text" placeholder="¿Qué desea buscar?">
         </div>        
