--- a/public/index.html
+++ b/public/index.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap" rel="stylesheet">
     
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/header.css">
-    <link rel="stylesheet" href="css/product-index.css">
-    <link rel="stylesheet" href="css/footer.css">
-    <link rel="stylesheet" href="css/inputs.css">
-    <link rel="stylesheet" href="css/textarea.css">
-    <link rel="stylesheet" href="css/login.css">
+    <link rel="stylesheet" href="/css/reset.css">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/header.css">
+    <link rel="stylesheet" href="/css/product-index.css">
+    <link rel="stylesheet" href="/css/footer.css">
+    <link rel="stylesheet" href="/css/inputs.css">
+    <link rel="stylesheet" href="/css/textarea.css">
+    <link rel="stylesheet" href="/css/login.css">
     
     <title>AluraGeek</title>
 
@@ -22,7 +22,7 @@
 <header class="cabecero">
     <nav class="cabecero__nav">
         <div class="cabecero__izq">
-            <a href="./index.html"><img class="cabecero__img" src="./img/Logo.png" alt="LogoCabecera"></a>
+            <a href="index.html"><img class="cabecero__img" src="/img/Logo.png" alt="LogoCabecera"></a>
             <i class="fa-solid fa-magnifying-glass cabecero__lupa" id="lupita"></i>
             <input class="cabecero__busqueda" type="text" placeholder="¿Qué desea buscar?" maxlength="20">
         </div>
@@ -51,8 +51,8 @@
     </section>
 
 
-<script type="module" src="./controllers/productos-controller.js"></script>
-<script type="module" src="./js/app.js"></script>
+<script type="module" src="/controllers/productos-controller.js"></script>
+<script type="module" src="/js/app.js"></script>
 <script src="https://kit.fontawesome.com/a2a09fc638.js" crossorigin="anonymous"></script>
 
 </body>
@@ -62,7 +62,7 @@
 
         <div class="pie__pagina__top__content">
             <div class="pie__izq">
-                <img src="./img/Logo.png">
+                <img src="/img/Logo.png">
                 <div class="pie__pagina__top__links">
                     <a href="#">Quienes somos</a>
                     <a href="#">Política de privacidad</a>
