--- a/public/index.html
+++ b/public/index.html
@@ -54,6 +54,7 @@
 
 <script type="module" src="/controllers/productos-controller.js"></script>
 <script type="module" src="/js/app.js"></script>
+<script type="module" src="/server.js"></script>
 <script src="https://kit.fontawesome.com/a2a09fc638.js" crossorigin="anonymous"></script>
 
 </body>
